    depend on register_globals
- Dropped magic_quotes_gpc, magic_quotes_runtime and magic_quotes_sybase ini
  settings (Pierre)
  -  get_magic_quotes_gpc, get_magic_quotes_runtime are kept but always return
     false, set_magic_quotes_runtime raises an E_CORE_ERROR
- Freetype 1.x and GD 1.x support removed (Pierre)
- Cleaned CGI code. Now FastCGI can not be disabled. See sapi/cgi/CHANGES
  for more details. (Dmitry)
- Removed support for "continue" and "break" operators with non-constant
  operands. (Dmitry)
- Implemented "jump label" operator (limited "goto"). (Dmitry, Sara)
- Changed __toString() behavior to call it in all necessary places
  (Marcus, Dmitry)
- Changed "instanceof" and "catch" operators, is_a() and is_subclass_of()
  functions to not call __autoload(). (Dmitry)
- Removed global reflection constants. (Johannes)
- Added "allow_url_include" ini directive to be able to turn off remote url
  code execution separately from the "allow_url_fopen" setting. (Rasmus)
- Added to cURL extension: (Ilia)
  . curl_setopt_array() which allows setting of multiple cURL options.
  . CURLINFO_HEADER_OUT constant to facilitate request retrieval.
- Added --rclass and --rextension CLI parameters to reflect internal classes
  and loaded extensions. (Johannes)
- Added optional parameter to http_build_query() to allow specification of 
  string separator. (Ilia)
- Added an optional parameter to parse_url() to allow retrieval of distinct URL
  components. (Ilia)
- Added an optional parameter to strstr() and stristr() for retrieval of either
  the part of haystack before or after first occurence of needle. (Johannes)
- Added possibility to check in which extension an internal function was
  defined using reflection API. (Johannes)
- Fixed bug #36840 (Memory leak if cast operator throws an exception that is
  caught). (Dmitry)
- Fixed bug #36630 (umask not reset at the end of the request). (Ilia)
- Fixed bug #34286 (__toString() behavior is inconsistent). (Marcus)